# os_buddy_alloc

./: .gitattributes  Makefile  README.md
include/: buddy_allocator.h  xtos.h
mm/: buddy_allocator.c  memory.c
operating_system/cross-tool/: loongarch64-unknown-linux-gnu-gdb
operating_system/kernel/: CMakeLists.txt  Makefile  linker.ld  loongarch64-toolchain.cmake
operating_system/kernel/mm/: memory.c
operating_system/run/: gdb.sh  run.sh
